phase 0 content done

--- a/hub/transplant/postop/staff/dietitian.html
+++ b/hub/transplant/postop/staff/dietitian.html
@@ -17,36 +17,46 @@
     <div data-include="/includes/transplant-subnav.html"></div>
     <div data-include="/includes/transplant-postop-subnav.html"></div>
     <div data-include="/includes/transplant-postop-staff-subnav.html"></div>
-<h1>Post-Op Staff: Dietitian</h1>
+<h1>Dietitian</h1>
 
-<h2>Role at a glance</h2>
+<h2>Short Description</h2>
+<p>
+  The dietitian aligns food with your medicines and labs. They focus on food safety early on,
+  steady energy for healing, blood pressure, blood sugar, and a healthy weight.
+</p>
+
+<h2>Main Priorities</h2>
 <ul>
-  <li>Helps food work with your meds and labs, not against them.</li>
-  <li>Focus on food safety, energy, blood pressure, and weight.</li>
+  <li><strong>Food safety:</strong> safe prep while you’re immunosuppressed (cook meats/eggs fully, rinse produce, avoid unpasteurized items).</li>
+  <li><strong>Healing nutrition:</strong> set protein and calorie goals to rebuild strength after surgery.</li>
+  <li><strong>Blood pressure & fluids:</strong> lower-sodium habits and steady hydration targets from your team.</li>
+  <li><strong>Blood sugar support:</strong> simple plans if steroids or meds raise glucose.</li>
+  <li><strong>Lab-guided tweaks:</strong> adjust potassium, magnesium, and phosphorus through food when appropriate.</li>
 </ul>
 
-<h2>They handle</h2>
+<h2>Issues They Work With</h2>
 <ul>
-  <li>Food safety guidelines during immunosuppression.</li>
-  <li>Protein and calorie goals for healing and strength.</li>
-  <li>Salt reduction for blood pressure; sugar strategies if steroids raise glucose.</li>
-  <li>Electrolyte tips (e.g., potassium/magnesium) based on labs.</li>
+  <li>Poor appetite, nausea, taste changes, early fullness.</li>
+  <li>Weight gain or loss, muscle loss, low energy.</li>
+  <li>High BP, higher sugars, or cholesterol concerns after transplant.</li>
+  <li>Electrolyte ups/downs tied to meds or hydration.</li>
 </ul>
 
-<h2>Not their job</h2>
+<h2>When to Go to Them</h2>
 <ul>
-  <li>They don’t prescribe or change medicines; they align diet with your plan.</li>
+  <li>Early after transplant and any time your weight, BP, sugars, or labs drift.</li>
+  <li>Before starting supplements or “detox/cleanse” plans.</li>
+  <li>When travel, work shifts, or appetite make your routine hard.</li>
+  <li><strong>Come prepared:</strong> a 3-day food log (photos are fine), home BP/weight, recent labs, and questions.</li>
 </ul>
 
-<h2>When to see them / what to bring</h2>
+<h2>What They Don’t Handle (Boundaries)</h2>
 <ul>
-  <li>Early after transplant and whenever weight, BP, or labs drift.</li>
-  <li>Bring a 3-day food log (photos are fine) and any supplements.</li>
+  <li>They don’t change prescriptions or dose meds — that’s your clinical team.</li>
+  <li>They don’t resolve insurance/copay issues — financial coordinator/insurer.</li>
+  <li>They don’t clear food–drug interactions alone — confirm with your pharmacist/provider.</li>
 </ul>
 
-<div class="callout"><p><strong>Questions to ask:</strong> What should I change first? Any foods that interact with my meds? How much protein and sodium should I aim for?</p></div>
-
-<p class="disclaimer">Educational info; follow your team’s plan.</p>
 
   </main>
   <div data-include="/includes/footer.html"></div>
