--- a/hub/transplant/postop/staff/nurse-coordinator.html
+++ b/hub/transplant/postop/staff/nurse-coordinator.html
@@ -17,35 +17,48 @@
     <div data-include="/includes/transplant-subnav.html"></div>
     <div data-include="/includes/transplant-postop-subnav.html"></div>
     <div data-include="/includes/transplant-postop-staff-subnav.html"></div>
-<h1>Post-Op Staff: Nurse Coordinator</h1>
+<h1>Nurse Coordinator</h1>
 
-<h2>Role at a glance</h2>
+<h2>Short Description</h2>
+<p>
+  The nurse coordinator is your first call after transplant. They triage symptoms, arrange labs and visits,
+  manage refills, translate instructions into plain English, and route you to the right clinician fast.
+</p>
+
+<h2>Main Priorities</h2>
 <ul>
-  <li>Your first call for symptoms, questions, and scheduling.</li>
-  <li>Connects you to the right person fast.</li>
+  <li><strong>Triage & next steps:</strong> decide if something needs home care, a same-day lab, a clinic visit, or the ER.</li>
+  <li><strong>Labs & scheduling:</strong> place standing orders (e.g., troughs before morning dose), book clinic, imaging, or biopsy.</li>
+  <li><strong>Medication flow:</strong> process refills, prior-auth follow-ups, pharmacy routing, and clarify timing around labs.</li>
+  <li><strong>Education:</strong> wound care basics, activity/lifting limits, hydration goals, and what to watch for.</li>
+  <li><strong>Care coordination:</strong> loop in your nephrologist, pharmacist, surgeon team, or social work as needed.</li>
 </ul>
 
-<h2>They handle</h2>
+<h2>Issues They Work With</h2>
 <ul>
-  <li>Triage for fever, GI upset, wound questions, and medication issues.</li>
-  <li>Ordering labs per protocol; scheduling visits, imaging, or biopsy.</li>
-  <li>Refill requests and messaging with your providers.</li>
+  <li><strong>Symptoms:</strong> fever, GI upset, less urine, swelling/rapid weight gain, wound redness or drainage, high BP.</li>
+  <li><strong>Lab logistics:</strong> missing orders, “do I take meds before labs?”, when and where to draw, how results are shared.</li>
+  <li><strong>Refills:</strong> running low, specialty pharmacy delays, mail-order hiccups, travel overrides.</li>
+  <li><strong>After-hours or outside care:</strong> you were seen in an ER/urgent care—what to do next and what records they need.</li>
 </ul>
 
-<h2>Not their job</h2>
+<h2>When to Go to Them</h2>
 <ul>
-  <li>They don’t make final diagnoses or set med doses—but they get you to the provider who does.</li>
+  <li><strong>New or worsening symptoms</strong> (not a 911 level emergency): call for triage and clear instructions.</li>
+  <li><strong>Before labs</strong> when timing is unclear (e.g., trough draw before the morning dose).</li>
+  <li><strong>Refills</strong>: request with a few business days’ lead time; sooner for specialty meds.</li>
+  <li><strong>Planning travel</strong>: lab schedule, extra doses, and what to do across time zones.</li>
+  <li><strong>Efficient call/message:</strong> have your med list with times, last doses, home BP/weight, pharmacy info, and symptom timeline.</li>
 </ul>
 
-<h2>When to see them / what to bring</h2>
+<h2>What They Don’t Handle (Boundaries)</h2>
 <ul>
-  <li>Any new/worsening symptom; questions about instructions; paperwork help.</li>
-  <li>Bring your med list, BP/weight logs, and recent lab dates.</li>
+  <li>Final diagnoses and dose changes — those come from your provider.</li>
+  <li>Insurance approvals, copays, billing questions — financial coordinator/insurer.</li>
+  <li>Ongoing counseling or complex social needs — social worker.</li>
+  <li>Emergencies (chest pain, severe breathing trouble, confusion) — use 911 or ER per on-call guidance.</li>
 </ul>
 
-<div class="callout"><p><strong>Questions to ask:</strong> What is “urgent” vs. “send a message”? Who is on call after hours? How do I prep for a trough lab?</p></div>
-
-<p class="disclaimer">Educational info; follow your team’s plan.</p>
 
   </main>
   <div data-include="/includes/footer.html"></div>
