--- a/hub/transplant/postop/staff/nephrologist.html
+++ b/hub/transplant/postop/staff/nephrologist.html
@@ -17,36 +17,47 @@
     <div data-include="/includes/transplant-subnav.html"></div>
     <div data-include="/includes/transplant-postop-subnav.html"></div>
     <div data-include="/includes/transplant-postop-staff-subnav.html"></div>
-<h1>Post-Op Staff: Transplant Nephrologist</h1>
+<h1>Nephrologist</h1>
 
-<h2>Role at a glance</h2>
+<h2>Short Description</h2>
+<p>
+  The transplant nephrologist leads your medical care after surgery. They track labs, tune anti-rejection
+  medicines, catch problems early, and guide long-term kidney health.
+</p>
+
+<h2>Main Priorities</h2>
 <ul>
-  <li>Leads your medical care after transplant.</li>
-  <li>Tunes anti-rejection meds based on labs and symptoms.</li>
+  <li><strong>Immunosuppression tuning:</strong> adjust anti-rejection doses based on drug levels, creatinine, and symptoms.</li>
+  <li><strong>Lab & vitals oversight:</strong> watch creatinine/eGFR, urine output, electrolytes, blood pressure, and weight.</li>
+  <li><strong>Problem detection:</strong> sort out dehydration vs. rejection vs. medication side effects; order tests/biopsy if needed.</li>
+  <li><strong>Whole-health management:</strong> treat BP, sugar, cholesterol, anemia, and bone/mineral issues that affect graft health.</li>
+  <li><strong>Follow-up plan:</strong> set visit/lab frequency and clear thresholds for calling early.</li>
 </ul>
 
-<h2>They handle</h2>
+<h2>Issues They Work With</h2>
 <ul>
-  <li>Reviewing creatinine, drug levels, electrolytes, and blood pressure.</li>
-  <li>Diagnosing problems (dehydration, rejection, infection risks) and ordering tests/biopsy if needed.</li>
-  <li>Adjusting meds (anti-rejection, BP, diabetes, lipids) and follow-up plans.</li>
+  <li>Rising creatinine, falling urine, rapid weight gain/swelling, or new pain over the kidney.</li>
+  <li>Abnormal drug levels, tremor, headaches, stomach upset/diarrhea, or sleep/mood changes from medicines.</li>
+  <li>Electrolyte drifts (potassium/magnesium), high BP, dizziness from over-diuresis, or dehydration.</li>
+  <li>Infection risk planning and vaccine timing (non-live vaccines).</li>
 </ul>
 
-<h2>Not their job (who does it instead)</h2>
+<h2>When to Go to Them</h2>
 <ul>
-  <li>Insurance logistics and forms → coordinator/social worker.</li>
-  <li>Day-to-day refills/PA chases → coordinator/pharmacy team.</li>
+  <li><strong>Early months:</strong> very frequent visits/labs, then spaced out as things stabilize.</li>
+  <li><strong>Call promptly for:</strong> fever, vomiting that affects meds, less urine, sudden swelling/weight gain, new wound redness/drainage.</li>
+  <li><strong>Before new meds/supplements:</strong> check for interactions that change drug levels.</li>
+  <li><strong>Bring to visits:</strong> exact med schedule with last dose times, home BP/weight logs, recent outside records (ER/urgent care), and questions.</li>
 </ul>
 
-<h2>When to see them / what to bring</h2>
+<h2>What They Don’t Handle (Boundaries)</h2>
 <ul>
-  <li>Very frequent at first, then spaced out as things stabilize.</li>
-  <li>Bring a med list with exact times, home BP log, weights, and any symptoms.</li>
+  <li>Day-to-day scheduling, refills logistics, or paperwork — nurse coordinator/social worker.</li>
+  <li>Insurance approvals and detailed cost questions — financial coordinator/insurer.</li>
+  <li>Early surgical wound/drain decisions — surgeon team.</li>
 </ul>
 
-<div class="callout"><p><strong>Questions to ask:</strong> What are my lab targets right now? When should I call urgently vs. message? Any changes to my med times or doses?</p></div>
 
-<p class="disclaimer">Educational info; follow your team’s plan.</p>
 
   </main>
   <div data-include="/includes/footer.html"></div>
