--- a/hub/transplant/postop/staff/social-worker.html
+++ b/hub/transplant/postop/staff/social-worker.html
@@ -18,36 +18,49 @@
     <div data-include="/includes/transplant-postop-subnav.html"></div>
     <div data-include="/includes/transplant-postop-staff-subnav.html"></div>
 
-<h1>Post-Op Staff: Social Worker</h1>
+<h1>Social Worker</h1>
 
-<h2>Role at a glance</h2>
+<h2>Short Description</h2>
+<p>
+  The social worker supports your mental health, caregiver plan, work/benefits paperwork,
+  and practical hurdles so recovery and follow-up stay on track.
+</p>
+
+<h2>Main Priorities</h2>
 <ul>
-  <li>Supports mental health, family/caregiver needs, work/benefits, and practical hurdles.</li>
-  <li>A safe place to talk through stress and big decisions.</li>
+  <li>Build a realistic caregiver plan (rides, home help, backups, respite options).</li>
+  <li>Guide work, school, and benefits paperwork (FMLA, disability, return-to-work notes).</li>
+  <li>Connect you to resources for transportation, lodging, medication costs, and community support.</li>
+  <li>Assess stress, anxiety, mood changes, sleep, and coping; arrange counseling referrals when needed.</li>
+  <li>Problem-solve barriers to adherence (childcare, schedules, housing/food insecurity).</li>
 </ul>
 
-<h2>They handle</h2>
+<h2>Issues They Work With</h2>
 <ul>
-  <li>Return-to-work planning, FMLA/disability paperwork, and employer notes.</li>
-  <li>Transportation, lodging, and financial-assistance resources.</li>
-  <li>Stress, anxiety, mood changes; referrals for counseling if needed.</li>
-  <li>Caregiver burnout support and community resources.</li>
+  <li>Overwhelm, worry, low mood, or steroid-related mood shifts.</li>
+  <li>Caregiver fatigue, family strain, or limited support at home.</li>
+  <li>Paperwork deadlines, employer communication, or school accommodations.</li>
+  <li>Financial stress affecting meds, labs, or visits; transportation/childcare gaps.</li>
+  <li>Substance use concerns; linkage to appropriate treatment if needed.</li>
 </ul>
 
-<h2>Not their job</h2>
+<h2>When to Go to Them</h2>
 <ul>
-  <li>They don’t give medical advice; they coordinate support and resources.</li>
+  <li>Any time stress or logistics make it hard to take meds, get labs, or keep appointments.</li>
+  <li>When forms, letters, or benefits decisions are due or confusing.</li>
+  <li>After a job/insurance change, move, or major family change.</li>
+  <li>If your caregiver is struggling or you need a backup plan.</li>
+  <li><strong>Come prepared:</strong> forms, deadlines, employer/insurer contacts, and your clinic’s medical record number.</li>
 </ul>
 
-<h2>When to see them / what to bring</h2>
+<h2>What They Don’t Handle (Boundaries)</h2>
 <ul>
-  <li>Anytime stress, finances, or logistics are getting in the way of recovery.</li>
-  <li>Bring forms, deadlines, and contact info for employers/insurers.</li>
+  <li>Medical diagnosis or medication dosing — that’s your clinical team.</li>
+  <li>Legal or financial decisions — they can refer/advocate but don’t provide legal advice or set coverage rules.</li>
+  <li>Emergency/crisis response — use your center’s urgent process or 911; they can help create a safety plan afterward.</li>
+  <li>Long-term therapy — they connect you to ongoing counseling if needed.</li>
 </ul>
 
-<div class="callout"><p><strong>Questions to ask:</strong> What programs can help with travel, time off, or meds? How can my caregiver get support? Who do I call in a crisis?</p></div>
-
-<p class="disclaimer">Educational info; follow your team’s plan.</p>
 
   </main>
   <div data-include="/includes/footer.html"></div>
