phase 0 content done

--- a/hub/transplant/postop/complications.html
+++ b/hub/transplant/postop/complications.html
@@ -26,45 +26,52 @@
     <div data-include="/includes/transplant-subnav.html"></div>
     <div data-include="/includes/transplant-postop-subnav.html"></div>
 <h1>Post-Op: Complications</h1>
-<p>Most transplants do well. Problems are more manageable when caught early. Call if something feels wrong—trust that spidey sense.</p>
+<p>Most transplants do well. Problems are easier to manage when caught early. If something feels wrong, call—early beats perfect.</p>
 
-<h2>Rejection (the immune response)</h2>
+<h2>Rejection (immune response)</h2>
 <ul>
-  <li><strong>What it is:</strong> the immune system attacks the kidney. It can happen early or later, even years out.</li>
-  <li><strong>How it’s found:</strong> rising creatinine, urine changes, symptoms, and sometimes a biopsy.</li>
-  <li><strong>Treatment:</strong> medicines are adjusted; some cases need short infusions or a hospital stay.</li>
-  <li><strong>Symptoms to report:</strong> fever, new pain over the kidney area, swelling, decreased urine, sudden weight gain.</li>
+  <li><strong>What it is:</strong> your immune system attacks the kidney; can happen early or years later.</li>
+  <li><strong>How it’s found:</strong> rising creatinine, urine changes, symptoms; sometimes a biopsy confirms.</li>
+  <li><strong>Treatment:</strong> adjust meds; some cases need short infusions or a brief hospital stay.</li>
+  <li><strong>Report fast:</strong> fever, new pain over the kidney, swelling, less urine, sudden weight gain.</li>
 </ul>
 
 <h2>Infections</h2>
 <ul>
-  <li><strong>Early (first month):</strong> surgical/line infections and typical hospital germs.</li>
-  <li><strong>1–6 months:</strong> you’re more vulnerable to certain viruses and opportunistic infections—report fevers and persistent cough/diarrhea.</li>
-  <li><strong>After 6 months:</strong> risk shifts toward community infections (flu, COVID, stomach bugs). Keep vaccines updated and call early for antivirals if exposed.</li>
+  <li><strong>0–1 month:</strong> surgical/line infections and hospital germs.</li>
+  <li><strong>1–6 months:</strong> higher risk for certain viruses and “opportunistic” infections; call for fever, persistent cough/diarrhea.</li>
+  <li><strong>After 6 months:</strong> community infections (flu, COVID, stomach bugs) are more common—stay up to date on vaccines and call early for antivirals if exposed.</li>
 </ul>
 
-<h2>Medication-related issues</h2>
+<h2>Medicine side effects</h2>
 <ul>
-  <li>High blood pressure, higher blood sugar or new diabetes, high cholesterol.</li>
-  <li>Tremor, headache, stomach upset/diarrhea.</li>
-  <li>Thinner bones over time; ask about vitamin D/calcium and screening.</li>
+  <li><strong>Vitals & labs:</strong> higher blood pressure, higher blood sugar/new diabetes, cholesterol changes.</li>
+  <li><strong>Day-to-day:</strong> tremor, headache, stomach upset/diarrhea, sleep or mood shifts (especially with steroids).</li>
+  <li><strong>Longer term:</strong> thinner bones—ask about vitamin D/calcium and screening.</li>
+  <li><strong>Interactions:</strong> some antibiotics/antifungals, seizure meds, and certain citrus (e.g., grapefruit) can change levels—always check before new meds/supplements.</li>
 </ul>
 
-<h2>Other potential problems</h2>
+<h2>Surgical & urologic issues</h2>
 <ul>
-  <li><strong>Urine/ureter issues:</strong> leaks or narrowings can cause pain, swelling, or low urine—these are fixable but need prompt care.</li>
-  <li><strong>Blood clots:</strong> calf pain/swelling or shortness of breath needs urgent evaluation.</li>
-  <li><strong>Skin cancers:</strong> more common on sun-exposed areas—do regular checks and use sunscreen.</li>
+  <li><strong>Ureter problems:</strong> leaks or narrowings can cause pain, swelling, or low urine; usually fixable with procedures.</li>
+  <li><strong>Fluid collections:</strong> seroma/lymphocele near the kidney may need drainage.</li>
+  <li><strong>Wound issues & hernias:</strong> redness, drainage, or bulges—report promptly.</li>
+</ul>
+
+<h2>Clots & heart/lungs</h2>
+<ul>
+  <li><strong>Blood clots (DVT/PE):</strong> calf pain/swelling or sudden shortness of breath needs urgent care.</li>
+  <li><strong>Heart risk:</strong> blood pressure, cholesterol, and diabetes control still matter after transplant.</li>
 </ul>
 
 <h2>When to call</h2>
 <ul>
   <li><strong>Call your clinic promptly:</strong> fever &gt; 100.4–101°F, chills, worsening cough, vomiting that prevents meds, new/worsening pain over the kidney, less urine, sudden weight gain.</li>
-  <li><strong>Call 911 / go to ER:</strong> chest pain, trouble breathing, one-sided leg swelling/pain, severe dehydration, confusion, stroke-like symptoms.</li>
+  <li><strong>Call 911 / go to ER:</strong> chest pain, trouble breathing, one-sided leg swelling/pain, severe dehydration/confusion, stroke-like symptoms.</li>
 </ul>
 
 <div class="callout">
-  <p><strong>Questions to ask:</strong> What are my usual “warning” patterns? If my labs rise, what tests come next? When should I go straight to the ER vs. call the clinic?</p>
+  <p><strong>Questions to ask:</strong> If my labs rise, what tests come next? What’s my “call right away” list? Which meds or foods can change my drug levels?</p>
 </div>
 
 <p class="disclaimer">This page is educational and can’t cover every case. Your care team will personalize prevention and treatment.</p>
