--- a/hub/transplant/surgery/staff/anesthesia.html
+++ b/hub/transplant/surgery/staff/anesthesia.html
@@ -18,32 +18,50 @@
     <div data-include="/includes/transplant-surgery-subnav.html"></div>
     <div data-include="/includes/transplant-surgery-staff-subnav.html"></div>
 
-    <h1>Surgery Staff: Anesthesiologist</h1>
+<h1>Anesthesiologist</h1>
 
-    <h2>Role at a glance</h2>
-    <ul>
-      <li>What they focus on in this stage.</li>
-      <li>How they interact with you and the rest of the team.</li>
-    </ul>
+<h2>Short Description</h2>
+<p>
+  The anesthesiologist keeps you safely asleep and pain-controlled during surgery. They manage your airway,
+  breathing, blood pressure, fluids, temperature, and nausea prevention so the new kidney has the best start.
+</p>
 
-    <h2>They handle</h2>
-    <ul>
-      <li>Key responsibilities (bulleted, plain English).</li>
-    </ul>
+<h2>Main Priorities</h2>
+<ul>
+  <li><strong>General anesthesia:</strong> place a breathing tube, monitor oxygen and heart rhythm, and keep you fully asleep and pain-free.</li>
+  <li><strong>Blood pressure & fluids:</strong> maintain targets and give fluids/medicines so blood flow to the kidney stays steady.</li>
+  <li><strong>Lines & monitoring:</strong> start IVs; sometimes place an arterial line for close blood-pressure tracking.</li>
+  <li><strong>Temperature:</strong> use warmers to prevent getting cold (hypothermia slows healing and can raise risks).</li>
+  <li><strong>Pain & nausea plan:</strong> multimodal pain control and anti-nausea medicines during and after surgery.</li>
+  <li><strong>Safe wake-up:</strong> remove the breathing tube when you’re ready and hand off to the PACU team with a clear plan.</li>
+</ul>
 
-    <h2>Not their job (who does it instead)</h2>
-    <ul>
-      <li>Boundary clarifier → points you to the right person.</li>
-    </ul>
+<h2>Issues They Work With</h2>
+<ul>
+  <li><strong>Airway:</strong> prior neck/jaw problems, sleep apnea, or dental issues (loose teeth, bridges) that affect intubation.</li>
+  <li><strong>Nausea risk:</strong> past post-op nausea/vomiting (PONV), motion sickness—extra prevention can be given.</li>
+  <li><strong>Blood pressure swings:</strong> treat lows/highs quickly to protect the kidney and your heart/brain.</li>
+  <li><strong>Pain control:</strong> adjust meds; some centers add numbing blocks near the incision when appropriate.</li>
+  <li><strong>IV access:</strong> difficult veins, prior fistulas/grafts to avoid, or need for additional monitoring lines.</li>
+  <li><strong>Allergies & reactions:</strong> antibiotic or latex allergy, prior anesthesia problems—plan is tailored.</li>
+</ul>
 
-    <h2>When to see them / what to bring</h2>
-    <ul>
-      <li>Typical visit timing and any prep (med list, forms, logs).</li>
-    </ul>
+<h2>When to Go to Them</h2>
+<ul>
+  <li><strong>Pre-op visit or call:</strong> review health history, prior anesthesia experiences, medicines, and fasting instructions.</li>
+  <li><strong>Day of surgery:</strong> confirm last food/drink time, last dialysis date/time (if applicable), and morning meds you took/held.</li>
+  <li><strong>Bring/tell:</strong> medication list with exact times, CPAP machine (if you use one), allergies, dental issues, past nausea or difficult airways, and any heart/lung problems.</li>
+</ul>
 
-    <div class="callout"><p><strong>Questions to ask:</strong> A short, practical list tailored to this role.</p></div>
+<h2>What They Don’t Handle (Boundaries)</h2>
+<ul>
+  <li>They don’t set your long-term transplant medicines or clinic follow-up—your transplant team does.</li>
+  <li>They don’t manage insurance, refills, or forms—coordinators and the inpatient team handle those.</li>
+  <li>After you leave the recovery room, your first contact is the inpatient/transplant unit nurse; they loop in anesthesia if needed.</li>
+</ul>
 
-    <p class="disclaimer">Informational only; your center’s process may differ.</p>
+<p class="disclaimer">Informational only; practices vary by center. Follow your team’s specific instructions.</p>
+
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
