--- a/hub/transplant/surgery/staff/or-nurse.html
+++ b/hub/transplant/surgery/staff/or-nurse.html
@@ -18,32 +18,49 @@
     <div data-include="/includes/transplant-surgery-subnav.html"></div>
     <div data-include="/includes/transplant-surgery-staff-subnav.html"></div>
 
-    <h1>Surgery Staff: OR Nurse</h1>
+<h1>OR Nurse (Scrub)</h1>
 
-    <h2>Role at a glance</h2>
-    <ul>
-      <li>What they focus on in this stage.</li>
-      <li>How they interact with you and the rest of the team.</li>
-    </ul>
+<h2>Short Description</h2>
+<p>
+  The OR (scrub) nurse keeps the sterile field safe and the operation moving.
+  They prepare instruments, anticipate the surgeon’s needs, and help prevent errors.
+</p>
 
-    <h2>They handle</h2>
-    <ul>
-      <li>Key responsibilities (bulleted, plain English).</li>
-    </ul>
+<h2>Main Priorities</h2>
+<ul>
+  <li>Set up and maintain the sterile field; ensure correct instruments and supplies are ready.</li>
+  <li>Participate in safety checks (“time-out”) for identity, procedure, and site.</li>
+  <li>Pass instruments and sutures, handle tissue and specimens correctly, and track implants/stents.</li>
+  <li>Count sponges/needles/instruments with the circulating nurse—before, during, and after the case.</li>
+  <li>Help with patient positioning and skin prep/draping to protect nerves and skin.</li>
+  <li>Watch for breaks in sterility and equipment issues; speak up immediately to keep you safe.</li>
+</ul>
 
-    <h2>Not their job (who does it instead)</h2>
-    <ul>
-      <li>Boundary clarifier → points you to the right person.</li>
-    </ul>
+<h2>Issues They Work With</h2>
+<ul>
+  <li><strong>Breaks in sterility:</strong> detect and correct quickly to avoid infection risk.</li>
+  <li><strong>Count mismatches:</strong> resolve with the team before closing.</li>
+  <li><strong>Equipment problems:</strong> instrument failure, battery/cord issues, backup set requests.</li>
+  <li><strong>Specimen handling:</strong> correct labeling and handoff for pathology/microbiology.</li>
+  <li><strong>Positioning/pressure:</strong> padding and re-checks to prevent pressure injuries.</li>
+</ul>
 
-    <h2>When to see them / what to bring</h2>
-    <ul>
-      <li>Typical visit timing and any prep (med list, forms, logs).</li>
-    </ul>
+<h2>When to Go to Them</h2>
+<ul>
+  <li>You’ll meet the scrub and circulating nurses in the OR before anesthesia. They confirm your identity, allergies, and procedure.</li>
+  <li>During surgery you’re asleep—the scrub nurse works at the sterile field with the surgeon.</li>
+  <li>After surgery, your point of contact is the <strong>PACU nurse</strong> and then the <strong>inpatient/transplant unit nurse</strong>.</li>
+</ul>
 
-    <div class="callout"><p><strong>Questions to ask:</strong> A short, practical list tailored to this role.</p></div>
+<h2>What They Don’t Handle (Boundaries)</h2>
+<ul>
+  <li>They don’t manage long-term medicines or clinic follow-up—your transplant providers do.</li>
+  <li>They don’t handle scheduling, refills, or insurance forms—coordinators and the floor team handle those.</li>
+  <li>They don’t provide post-op phone triage—use your clinic’s on-call process.</li>
+</ul>
 
-    <p class="disclaimer">Informational only; your center’s process may differ.</p>
+<p class="disclaimer">Informational only; titles vary by hospital. In some centers, a scrub technologist shares these tasks with or instead of a scrub nurse.</p>
+
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
