--- a/hub/transplant/surgery/surgery.html
+++ b/hub/transplant/surgery/surgery.html
@@ -24,11 +24,97 @@
   <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes/transplant-subnav.html"></div>
-    <h1>Transplant Surgery</h1>
-    <p>
-      An overview of kidney transplant surgery: how the procedure is performed, 
-      anesthesia details, and what to expect immediately afterward.
-    </p>
+<div data-include="/includes/transplant-surgery-subnav.html"></div>
+
+<h1>The Transplant Surgery</h1>
+<p>
+  Most kidney transplants take a few hours. The new kidney is placed low in the abdomen and connected to nearby blood vessels and the bladder. 
+  In most cases your own kidneys stay in place.
+</p>
+
+<h2>Before the OR (check-in & prep)</h2>
+<ul>
+  <li>Confirm consent, allergies, and last dialysis/meds; surgical site is marked.</li>
+  <li>IV started; antibiotics and other pre-op medicines are given.</li>
+  <li>Immunosuppression is started per your center’s plan (some doses before, during, or right after surgery).</li>
+</ul>
+
+<h2>Anesthesia</h2>
+<ul>
+  <li>General anesthesia (fully asleep) with a breathing tube; monitoring lines are placed.</li>
+  <li>You won’t feel or remember the procedure; nausea prevention is routine.</li>
+</ul>
+
+<h2>What the surgeon does</h2>
+<ul>
+  <li>Makes an incision in the lower abdomen (right or left, based on your anatomy and vessels).</li>
+  <li>Connects the kidney vein and artery to blood vessels in your pelvis so blood flows through the new kidney.</li>
+  <li>Connects the ureter (kidney tube) to your bladder. A small internal stent is often placed to help healing.</li>
+  <li>Confirms bleeding is controlled and the kidney is well-positioned before closing.</li>
+</ul>
+
+<h2>Lines & devices you may wake up with</h2>
+<ul>
+  <li><strong>Foley catheter:</strong> drains urine; usually removed a few days after surgery.</li>
+  <li><strong>Ureteral stent (internal):</strong> removed in clinic later (often 2–6 weeks).</li>
+  <li><strong>IV lines:</strong> for fluids and medicines; sometimes a wrist arterial line for close BP checks.</li>
+  <li><strong>JP drain (bulb):</strong> not always used; collects fluid near the incision, removed when output is low/light.</li>
+  <li><strong>Wound vacuum:</strong> occasionally used to help a difficult incision heal; dressing changes are scheduled.</li>
+</ul>
+
+<h2>How long it takes</h2>
+<ul>
+  <li><strong>Living-donor kidneys:</strong> often ~2–3.5 hours.</li>
+  <li><strong>Deceased-donor kidneys:</strong> can be longer depending on timing and complexity.</li>
+  <li>Prior surgeries, body habitus, vessel anatomy, and scar tissue can add time. Longer does not automatically mean something went wrong.</li>
+</ul>
+
+<h2>Right after surgery (PACU → surgical floor)</h2>
+<ul>
+  <li>You’ll wake in recovery; pain and nausea are treated right away.</li>
+  <li>Urine may start immediately or take time—especially with deceased-donor kidneys. Lab checks begin day one.</li>
+  <li>Fluids and blood pressure are adjusted to support the kidney. Early walking starts with help.</li>
+</ul>
+
+<h2>Pain plan & nausea</h2>
+<ul>
+  <li>Multimodal pain control (combining methods) is typical; some centers use a patient-controlled pump early on.</li>
+  <li>Stool softeners with opioids; switch to acetaminophen when possible. Avoid NSAIDs unless your team says otherwise.</li>
+  <li>Antinausea meds are available—ask early so you can keep medicines down.</li>
+</ul>
+
+<h2>When plans differ</h2>
+<ul>
+  <li><strong>Delayed graft function:</strong> the kidney is slow to “wake up.” Short-term dialysis may be needed while recovery continues.</li>
+  <li><strong>Additional procedures:</strong> urine leaks/strictures or bleeding may require a procedure; your team will explain if this happens.</li>
+</ul>
+
+<h2>Family updates</h2>
+<ul>
+  <li>The team usually gives an update after the operation and again once you’re settled in recovery or your room.</li>
+</ul>
+
+<h2>Risks (brief)</h2>
+<ul>
+  <li>Bleeding, clots, wound issues; urine leak or narrowing; infections; and rejection risk later. Your team works to reduce these.</li>
+</ul>
+<p>Read more: <a href="/hub/transplant/postop/complications.html" data-evt="surgery:to-complications">Post-Op Complications</a></p>
+
+<h2>What to bring / tell your team</h2>
+<ul>
+  <li>Photo ID, insurance card, medication list with exact times, and allergy list.</li>
+  <li>CPAP machine if you use one; comfortable walking shoes; phone charger and a short checklist for questions.</li>
+  <li>Tell the team about any blood thinners, recent infections, or last dialysis date/time.</li>
+</ul>
+
+<div class="callout">
+  <p><strong>Quick facts:</strong> Most people keep their original kidneys. Expect a Foley catheter at first and a bladder stent that’s removed later in clinic. Early walking, steady fluids, and on-time meds help the new kidney thrive.</p>
+</div>
+
+<p class="disclaimer">This page is educational and can’t cover every case. Your surgical team will personalize the plan for you.</p>
+
+<p>Next: <a href="/hub/transplant/surgery/recovery-inpatient.html" data-evt="surgery:to-recovery-inpatient">In-Hospital Recovery</a> · <a href="/hub/transplant/surgery/staff-surgery.html" data-evt="surgery:to-staff">Surgical Staff Roles</a></p>
+
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
