--- a/hub/transplant/postop/recovery.html
+++ b/hub/transplant/postop/recovery.html
@@ -26,47 +26,103 @@
     <div data-include="/includes/transplant-subnav.html"></div>
     <div data-include="/includes/transplant-postop-subnav.html"></div>
 <h1>Post-Op: Recovery</h1>
-<p>Recovery is individual. Most people go home in 2–4 days, feel steadier by week 2, and rebuild strength over the next few months.</p>
+<p>Recovery is individual. Most people go home in 2–4 days, feel steadier by week 2, and rebuild strength over the next few months. The first year is about steady routines, early calls when something feels off, and small wins that add up.</p>
 
-<h2>What the first 6 weeks usually look like</h2>
+<h2>Hospital → Home: first 6 weeks</h2>
 <ul>
-  <li><strong>Hospital (days 1–4):</strong> walking the day of/after surgery, pain control, urine and labs watched closely.</li>
-  <li><strong>Week 1–2:</strong> expect fatigue. Short walks daily. No tub baths, pools, or hot tubs until incisions fully closed.</li>
-  <li><strong>Weeks 3–6:</strong> walking > 30 minutes most days; light chores. Many return to desk work by 2–4 weeks; physical jobs can take 4–8+ weeks with clearance.</li>
+  <li><strong>Hospital (days 1–4):</strong> walk the day of/after surgery; pain control; urine, blood pressure, and labs watched closely.</li>
+  <li><strong>Week 1–2:</strong> expect fatigue. Short walks daily. Shower okay; no soaking (tubs, pools, hot tubs) until fully closed and cleared.</li>
+  <li><strong>Weeks 3–6:</strong> walks &gt; 30 minutes most days; light chores. Many return to desk work by 2–4 weeks; physical jobs often 4–8+ weeks with clearance.</li>
 </ul>
 
-<h2>Medications &amp; labs</h2>
+<h2>Clinic &amp; labs: typical first-year cadence</h2>
+<p>Every center adjusts to your situation. This is a common “if stable” outline.</p>
 <ul>
-  <li><strong>Take anti-rejection meds exactly on time.</strong> Set alarms; do not double up if you miss—call your team.</li>
-  <li><strong>Lab schedule:</strong> very frequent at first (often 2×/week), then weekly, then less often as things stabilize.</li>
-  <li><strong>Before-dose labs:</strong> if your team asks for a “trough,” have blood drawn <em>before</em> your morning dose.</li>
+  <li><strong>Weeks 0–2:</strong> labs 2×/week; clinic weekly (sometimes twice week 1). Draw trough level <em>before</em> morning dose.</li>
+  <li><strong>Weeks 3–6:</strong> labs weekly; clinic weekly or every 2 weeks.</li>
+  <li><strong>Months 2–3:</strong> labs every 1–2 weeks; clinic every 2–4 weeks.</li>
+  <li><strong>Months 4–6:</strong> labs every 2–4 weeks; clinic every 4–8 weeks.</li>
+  <li><strong>Months 7–12:</strong> labs monthly; clinic every 2–3 months.</li>
+  <li><strong>After year 1 (if stable):</strong> labs every 1–3 months; clinic every 3–6 months.</li>
 </ul>
 
-<h2>Incision, pain, and activity</h2>
+<h3>What’s usually checked</h3>
 <ul>
-  <li>Keep the incision clean/dry; pat dry after showers. Watch for spreading redness, drainage, or odor.</li>
-  <li>Use stool softeners with narcotics; transition to acetaminophen if approved. Avoid NSAIDs unless your team says otherwise.</li>
-  <li>No lifting > 10–15 lbs and avoid core-straining moves until cleared. Drive only when off narcotics and you can brake/turn safely.</li>
+  <li><strong>Kidney &amp; electrolytes:</strong> creatinine/eGFR, BUN, potassium, sodium, bicarbonate, magnesium, phosphorus.</li>
+  <li><strong>Blood &amp; urine:</strong> CBC, urinalysis, urine protein/creatinine ratio.</li>
+  <li><strong>Drug level:</strong> tacrolimus/calcineurin-inhibitor trough (timed before dose).</li>
+  <li><strong>Metabolic:</strong> blood pressure logs, weight, lipids (periodic), A1c if sugars run high.</li>
+  <li><strong>Infection monitoring:</strong> many centers screen for BK virus regularly in year one; CMV monitoring depends on your risk and meds.</li>
+</ul>
+
+<h2>Immunosuppression basics</h2>
+<ul>
+  <li><strong>Timing is medicine:</strong> take anti-rejection meds on time, every time. Set alarms. If a dose is late or missed, don’t double up—call for instructions.</li>
+  <li><strong>Trough labs:</strong> for level checks, do blood draw <em>before</em> the morning dose and bring exact last-dose times.</li>
+  <li><strong>Interactions:</strong> always check before new prescriptions, OTCs, or supplements. Some antibiotics/antifungals, seizure meds, and certain citrus (e.g., grapefruit, Seville orange, pomelo) can change levels.</li>
+  <li><strong>Vaccines:</strong> stay current on non-live vaccines (flu, COVID, etc.). Live vaccines are generally avoided—confirm with your team.</li>
+  <li><strong>Do not self-adjust:</strong> never change doses without the clinic’s orders.</li>
+</ul>
+
+<h2>Incision &amp; devices</h2>
+<ul>
+  <li><strong>Wound care:</strong> keep clean/dry; pat dry after showers. Watch for spreading redness, warmth, worsening pain, drainage, or odor.</li>
+  <li><strong>Ureteral stent:</strong> often removed in a clinic procedure around 2–6 weeks—your team will schedule it.</li>
+  <li><strong>JP drain (bulb drain):</strong> not everyone has one. It removes fluid from the surgery area. Keep the bulb compressed, empty as instructed, and log amounts. Secure with tape/safety pin so it doesn’t tug. Removal is usually when output is low and light. Call for cloudy/bloody output that increases, foul smell, or redness spreading along the drain site.</li>
+  <li><strong>Wound vacuum (“wound vac”):</strong> sometimes used to help a difficult incision heal. Keep the pump on (24/7 unless told otherwise), charge the battery, and check the dressing seal (no constant hissing). Dressing changes are done by clinic/home health every few days. Call for continuous alarms, loss of seal, heavy drainage/bleeding, worsening pain, or foul odor.</li>
+  <li><strong>Pain meds:</strong> use stool softeners with narcotics; transition to acetaminophen if approved. Avoid NSAIDs unless your team says otherwise.</li>
+</ul>
+
+
+<h2>Activity &amp; return to normal</h2>
+<ul>
+  <li><strong>Lifting:</strong> avoid &gt;10–15 lb and core-straining moves until cleared.</li>
+  <li><strong>Walking:</strong> daily, building up pace and distance; stairs are fine if steady.</li>
+  <li><strong>Driving:</strong> once off narcotics and you can brake/turn safely (confirm with your team).</li>
+  <li><strong>Work &amp; sex:</strong> timing is individualized; ask at follow-up. Many return to desk work by 2–4 weeks.</li>
+  <li><strong>Sun protection:</strong> long-term meds raise skin-cancer risk—use sunscreen, hats, and skin checks.</li>
 </ul>
 
 <h2>Food, fluids, and sleep</h2>
 <ul>
-  <li>Hydrate steadily unless told otherwise. Aim for pale yellow urine.</li>
-  <li>Balanced meals; limit salt to help blood pressure. If food tastes “off,” small frequent meals are fine.</li>
-  <li>Some anti-rejection meds interact with certain citrus (e.g., grapefruit). Ask your pharmacist what to avoid.</li>
+  <li><strong>Hydration:</strong> steady fluids unless told otherwise; aim for pale-yellow urine and follow your clinic’s target.</li>
+  <li><strong>Meals:</strong> balanced, lower-sodium to help blood pressure. Small frequent meals are fine if appetite is off.</li>
+  <li><strong>Food safety:</strong> cook meats/eggs fully, rinse produce, avoid unpasteurized items.</li>
+  <li><strong>Blood sugar:</strong> steroids can raise glucose—simple, sustainable adjustments help; your team will guide you.</li>
+  <li><strong>Sleep:</strong> short naps are okay early on; anchor a regular bedtime as energy returns.</li>
+</ul>
+
+<h2>Bladder &amp; bathroom changes</h2>
+<ul>
+  <li><strong>Frequent urination is common early on.</strong> After dialysis, the bladder can be “out of practice” and smaller. As the new kidney wakes up, you may pee often—especially at night—and the bladder gradually stretches back.</li>
+  <li><strong>Nighttime routine:</strong> keep a bedside urinal (or commode), a small light or motion-sensor night light, and a clear path to reduce fall risk. Consider an absorbent pad on the mattress for peace of mind.</li>
+  <li><strong>Fluids:</strong> meet your clinic’s hydration target, but avoid big fluid boluses late in the evening if you’re up all night—ask your team how to time intake for you.</li>
+  <li><strong>Med timing:</strong> if you’re on diuretics, ask whether earlier dosing could help with nocturnal trips.</li>
+  <li><strong>Call your team promptly</strong> for burning with urination, fever, pelvic or flank pain, blood in urine that doesn’t quickly clear, inability to pee for 6–8 hours, or a sudden drop in urine output.</li>
+</ul>
+
+
+<h2>Home monitoring</h2>
+<ul>
+  <li>Track <strong>blood pressure</strong>, <strong>weight</strong>, <strong>temperature</strong>, and any <strong>new symptoms</strong>.</li>
+  <li>Note <strong>med times</strong> and bring your log to clinic. Consistency helps spot trends fast.</li>
+  <li>If you’re seen outside your transplant clinic (ER/urgent care), tell them you’re a transplant recipient and notify your team after.</li>
 </ul>
 
 <h2>When to call</h2>
 <ul>
-  <li><strong>Call your team now:</strong> fever &gt; 101°F, vomiting that prevents meds, new/worsening swelling at the incision, urine output dropping, new leg swelling or calf pain.</li>
-  <li><strong>Call 911 / go to ER:</strong> severe chest pain, trouble breathing, severe bleeding, confusion, inability to wake/stay awake.</li>
+  <li><strong>Call your clinic promptly:</strong> fever &gt; 100.4–101°F, chills, vomiting that prevents meds, new/worsening pain over the kidney, less urine, sudden weight gain or swelling, spreading redness at the incision.</li>
+  <li><strong>Call 911 / go to ER:</strong> chest pain, trouble breathing, one-sided leg swelling/pain, severe dehydration/confusion, stroke-like symptoms.</li>
 </ul>
 
 <div class="callout">
-  <p><strong>Questions to ask:</strong> What’s my activity limit and for how long? When can I return to work or driving? Which symptoms should trigger an urgent call vs. a message?</p>
+  <p><strong>Questions to ask:</strong> What’s my current lab/visit cadence? What are my “call now” symptoms? Which meds or foods can change my levels? When can I lift, drive, and return to work?</p>
 </div>
 
-<p class="disclaimer">This page is educational, not medical advice. Follow your team’s specific instructions.</p>
+<p class="disclaimer">This page is educational and can’t cover every case. Follow your team’s specific instructions.</p>
+
+<p>See also: <a href="/hub/transplant/postop/complications.html" data-evt="postop:to-complications">Complications</a> · <a href="/hub/transplant/postop/life-after.html" data-evt="postop:to-life-after">Life After</a></p>
+
 
   </main>
   <div data-include="/includes/footer.html"></div>
