--- a/hub/transplant/surgery/recovery-inpatient.html
+++ b/hub/transplant/surgery/recovery-inpatient.html
@@ -24,11 +24,80 @@
   <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes/transplant-subnav.html"></div>
-    <h1>Transplant Surgery</h1>
-    <p>
-      An overview of kidney transplant surgery: how the procedure is performed, 
-      anesthesia details, and what to expect immediately afterward.
-    </p>
+<div data-include="/includes/transplant-surgery-subnav.html"></div>
+
+<h1>In-Hospital Recovery</h1>
+<p>
+  The first 2–4 days focus on pain control, steady fluids and blood pressure, early walking, and
+  learning your new medication routine. Plans vary by center and by how quickly the kidney “wakes up.”
+</p>
+
+<h2>First 24–72 hours: what to expect</h2>
+<ul>
+  <li><strong>PACU → surgical floor:</strong> you wake in recovery, then move to your room when stable.</li>
+  <li><strong>Vitals & labs:</strong> blood pressure, urine output, and creatinine are checked closely.</li>
+  <li><strong>Walking:</strong> first walk the day of/after surgery with help; several short walks daily.</li>
+  <li><strong>Breathing:</strong> use the incentive spirometer every hour when awake; leg pumps (SCDs) help prevent clots.</li>
+  <li><strong>Eating:</strong> start with sips/ice → clear liquids → light food as nausea settles and bowel sounds return.</li>
+</ul>
+
+<h2>Lines & devices you may have</h2>
+<ul>
+  <li><strong>Foley catheter:</strong> drains urine; commonly removed in a few days once output is steady.</li>
+  <li><strong>Ureteral stent (internal):</strong> protects the bladder connection; removed later in clinic (often 2–6 weeks).</li>
+  <li><strong>IV lines:</strong> for fluids and medicines; sometimes an arterial line for close BP checks.</li>
+  <li><strong>JP drain (bulb):</strong> not always used; collects fluid near the incision. Nurses will empty and measure output; removal when output is low and light.</li>
+  <li><strong>Wound vacuum:</strong> occasionally used to support healing if the incision needs help. Staff manage dressing changes and pump alarms.</li>
+</ul>
+
+<h2>Pain, nausea, bowels</h2>
+<ul>
+  <li><strong>Pain plan:</strong> multimodal (several methods together). Tell staff early if pain is building.</li>
+  <li><strong>Nausea:</strong> anti-nausea meds are available—ask so you can keep medicines down.</li>
+  <li><strong>Bowels:</strong> stool softeners and early walking prevent constipation; gas pain is common and improves with movement.</li>
+</ul>
+
+<h2>Fluids, blood pressure, and the kidney</h2>
+<ul>
+  <li>Fluids are adjusted to support the graft; blood pressure targets are set by your team.</li>
+  <li><strong>Delayed graft function:</strong> sometimes the kidney is slow to start, especially with deceased-donor kidneys. Short-term dialysis can be needed while recovery continues.</li>
+</ul>
+
+<h2>Medications & teaching</h2>
+<ul>
+  <li>First doses of anti-rejection medicines often start around surgery day. Nurses/pharmacists will review names, timing, and side effects.</li>
+  <li>Before discharge you’ll do a “teach-back” (show you can take meds correctly) and get a written schedule. Ask about trough labs drawn <em>before</em> morning doses after you’re home.</li>
+</ul>
+
+<h2>Incision care & activity in the hospital</h2>
+<ul>
+  <li>Keep the incision clean and dry; staff will change dressings. Tell them about spreading redness, warmth, foul odor, or new drainage.</li>
+  <li>Walk the hall 3–5 times/day as able. No lifting heavier than a gallon of milk.</li>
+</ul>
+
+<h2>Visitors & sleep</h2>
+<ul>
+  <li>Short, quiet visits help; skip visits if you’re wiped out. Hand hygiene for everyone.</li>
+  <li>Hospitals are noisy—earplugs/eye mask help. Short naps are fine; try for a consistent bedtime.</li>
+</ul>
+
+<h2>Discharge checklist</h2>
+<ul>
+  <li>Pain controlled on pills; able to walk to the bathroom and hallway with assistance as needed.</li>
+  <li>Eating/drinking without vomiting; bowel function returning.</li>
+  <li>Clear <strong>med schedule</strong> (names, doses, exact times) and first <strong>lab/clinic</strong> dates.</li>
+  <li>Wound care instructions; Foley/JP/wound-vac plans and who to call for problems.</li>
+  <li>Pharmacy picked; refills and prior authorizations started.</li>
+</ul>
+
+<div class="callout">
+  <p><strong>Ask each day:</strong> What are today’s goals (walks, labs, lines coming out)? What’s my discharge target date? When is my first clinic and lab after discharge?</p>
+</div>
+
+<p class="disclaimer">Educational info only. Your surgical and transplant teams will tailor the plan to you.</p>
+
+<p>See also: <a href="/hub/transplant/surgery/surgery.html" data-evt="inpatient:to-surgery">The Transplant Surgery</a> · <a href="/hub/transplant/postop/recovery.html" data-evt="inpatient:to-home-recovery">Recovery at Home</a> · <a href="/hub/transplant/postop/complications.html" data-evt="inpatient:to-complications">Complications</a></p>
+
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
