--- a/hub/transplant/surgery/staff/index.html
+++ b/hub/transplant/surgery/staff/index.html
@@ -24,11 +24,56 @@
   <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes/transplant-subnav.html"></div>
-    <h1>Transplant Staff</h1>
-    <p>
-      Meet the different specialists involved in a kidney transplant, including surgeons,
-      nephrologists, coordinators, and nurses, and learn their roles in patient care.
-    </p>
+<div data-include="/includes/transplant-surgery-subnav.html"></div>
+<div data-include="/includes/transplant-surgery-staff-subnav.html"></div>
+
+<h1>Surgery Staff</h1>
+<p>These are the people you’ll meet in the operating room and right after. Each role has a clear job so the surgery runs smoothly and safely.</p>
+
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/surgery/staff/surgeon.html" data-evt="surgery-staff:surgeon">Transplant Surgeon</a></h2>
+  <p>Leads the operation, connects the kidney to your blood vessels and bladder, and manages any surgical issues.</p>
+</section>
+
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/surgery/staff/anesthesia.html" data-evt="surgery-staff:anesthesia">Anesthesiologist</a></h2>
+  <p>Gives anesthesia (you’re fully asleep), controls pain and nausea, and keeps breathing, blood pressure, and fluids stable.</p>
+</section>
+
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/surgery/staff/or-nurse.html" data-evt="surgery-staff:or-nurse">OR Nurse (Scrub)</a></h2>
+  <p>Sets up sterile instruments, assists the surgeon, and keeps the sterile field safe throughout the case.</p>
+</section>
+
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/surgery/staff/circulating-nurse.html" data-evt="surgery-staff:circulating">Circulating Nurse</a></h2>
+  <p>Runs the room, documents, brings supplies, coordinates with your family, and handles safety checks.</p>
+</section>
+
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/surgery/staff/pacu-nurse.html" data-evt="surgery-staff:pacu">PACU Nurse</a></h2>
+  <p>Cares for you as you wake up—treats pain and nausea, watches vitals and urine, and gets you ready for your room.</p>
+</section>
+
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/surgery/staff/inpatient-nurse.html" data-evt="surgery-staff:inpatient">Inpatient/Transplant Unit Nurse</a></h2>
+  <p>Monitors labs and urine, manages lines and drains, helps with early walking, and reinforces medication teaching.</p>
+</section>
+
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/surgery/staff/inpatient-tech.html" data-evt="surgery-staff:inpatient-tech">Inpatient Tech (PCT/CNA)</a></h2>
+  <p>Checks vitals and urine/drain output, helps you walk safely, assists with hygiene, and keeps your room set for smooth recovery.</p>
+</section>
+
+
+<section class="testimonial-summary">
+  <h2><a href="/hub/transplant/surgery/staff/physical-therapist.html" data-evt="surgery-staff:pt">Physical Therapist</a></h2>
+  <p>Gets you moving safely after surgery—bed mobility, walking, stairs, and home-safety planning before discharge.</p>
+</section>
+
+
+<p class="disclaimer">Informational only; titles and responsibilities vary by center.</p>
+
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
