--- a/hub/transplant/surgery/staff/pacu-nurse.html
+++ b/hub/transplant/surgery/staff/pacu-nurse.html
@@ -18,32 +18,52 @@
     <div data-include="/includes/transplant-surgery-subnav.html"></div>
     <div data-include="/includes/transplant-surgery-staff-subnav.html"></div>
 
-    <h1>Surgery Staff: PACU/Inpatient Nurse</h1>
+<h1>PACU Nurse</h1>
 
-    <h2>Role at a glance</h2>
-    <ul>
-      <li>What they focus on in this stage.</li>
-      <li>How they interact with you and the rest of the team.</li>
-    </ul>
+<h2>Short Description</h2>
+<p>
+  The PACU (recovery) nurse cares for you as you wake up from anesthesia. They manage pain and nausea,
+  watch your breathing, blood pressure, and urine, and get you stable and comfortable for transfer to the floor.
+</p>
 
-    <h2>They handle</h2>
-    <ul>
-      <li>Key responsibilities (bulleted, plain English).</li>
-    </ul>
+<h2>Main Priorities</h2>
+<ul>
+  <li>Monitor airway, breathing, oxygen, heart rhythm, and blood pressure as anesthesia wears off.</li>
+  <li>Control pain and nausea; adjust meds quickly so you can breathe deeply and keep medicines down.</li>
+  <li>Check incision, dressings, and lines/devices (Foley catheter, IVs, arterial line if present, JP drain, wound vac).</li>
+  <li>Track urine output from the Foley and report changes to the team.</li>
+  <li>Warmth and comfort measures (blankets, positioning), safety checks, and fall prevention.</li>
+  <li>Start early breathing exercises (incentive spirometer) and help with the first short sit-up or dangle at bedside when safe.</li>
+  <li>Coordinate updates with your family and prepare you for transfer to the surgical/transplant unit.</li>
+</ul>
 
-    <h2>Not their job (who does it instead)</h2>
-    <ul>
-      <li>Boundary clarifier → points you to the right person.</li>
-    </ul>
+<h2>Issues They Work With</h2>
+<ul>
+  <li><strong>Pain not controlled</strong> or pain that spikes with movement or coughing.</li>
+  <li><strong>Nausea/vomiting</strong> that makes it hard to take meds—rapid anti-nausea treatment.</li>
+  <li><strong>Breathing concerns:</strong> low oxygen, shallow breaths; reminders and support with the spirometer.</li>
+  <li><strong>Blood pressure shifts:</strong> high or low readings managed with the anesthesia/surgery team.</li>
+  <li><strong>Low urine output or Foley issues:</strong> kinks, positioning, or need for team evaluation.</li>
+  <li><strong>Shivering/cold</strong> after anesthesia—warming blankets and monitoring.</li>
+  <li><strong>Confusion or agitation</strong> on wake-up (short-lived “emergence” effects), treated and re-oriented calmly.</li>
+</ul>
 
-    <h2>When to see them / what to bring</h2>
-    <ul>
-      <li>Typical visit timing and any prep (med list, forms, logs).</li>
-    </ul>
+<h2>When to Go to Them</h2>
+<ul>
+  <li>While you are in PACU (the recovery room) after surgery—use the call button or speak up for pain, nausea, breathing help, or if something feels wrong.</li>
+  <li>Before transfer, ask about your pain plan, nausea plan, Foley/urine goals, breathing exercises, and how to call for help on the floor.</li>
+  <li>After you leave PACU, your <strong>inpatient/transplant unit nurse</strong> becomes your first contact; they will loop in PACU/anesthesia if needed.</li>
+</ul>
 
-    <div class="callout"><p><strong>Questions to ask:</strong> A short, practical list tailored to this role.</p></div>
+<h2>What They Don’t Handle (Boundaries)</h2>
+<ul>
+  <li>They don’t set long-term medication doses—your transplant providers do that.</li>
+  <li>They don’t manage insurance, forms, or discharge paperwork—unit staff/coordinators handle those.</li>
+  <li>They don’t follow you after transfer—once you’re on the floor, page the unit nurse for anything you need.</li>
+</ul>
 
-    <p class="disclaimer">Informational only; your center’s process may differ.</p>
+<p class="disclaimer">Informational only; roles and policies vary by hospital. Follow your surgical team’s instructions.</p>
+
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
