--- a/hub/transplant/surgery/staff/surgeon.html
+++ b/hub/transplant/surgery/staff/surgeon.html
@@ -18,32 +18,52 @@
     <div data-include="/includes/transplant-surgery-subnav.html"></div>
     <div data-include="/includes/transplant-surgery-staff-subnav.html"></div>
 
-    <h1>Surgery Staff: Transplant Surgeon</h1>
+<h1>Transplant Surgeon</h1>
 
-    <h2>Role at a glance</h2>
-    <ul>
-      <li>What they focus on in this stage.</li>
-      <li>How they interact with you and the rest of the team.</li>
-    </ul>
+<h2>Short Description</h2>
+<p>
+  The transplant surgeon performs the operation, connects the new kidney to your blood vessels and bladder,
+  controls bleeding, and manages any surgical issues during the hospital stay.
+</p>
 
-    <h2>They handle</h2>
-    <ul>
-      <li>Key responsibilities (bulleted, plain English).</li>
-    </ul>
+<h2>Main Priorities</h2>
+<ul>
+  <li>Plan and perform the operation safely (incision, exposure, handling scar tissue).</li>
+  <li>Connect artery/vein to pelvic vessels so blood flows through the kidney.</li>
+  <li>Attach the ureter to the bladder; place a temporary internal stent when needed.</li>
+  <li>Decide on drains (JP) or a wound vacuum and set removal criteria.</li>
+  <li>Control bleeding, prevent clots, and protect the bladder connection (no excess tension).</li>
+  <li>Set early activity limits and coordinate pain control with anesthesia and the inpatient team.</li>
+  <li>Update family after surgery and when you’re settled in recovery or your room.</li>
+</ul>
 
-    <h2>Not their job (who does it instead)</h2>
-    <ul>
-      <li>Boundary clarifier → points you to the right person.</li>
-    </ul>
+<h2>Issues They Work With</h2>
+<ul>
+  <li>Complex anatomy or prior abdominal surgeries that change the approach.</li>
+  <li>Bleeding, hematoma, or need to return to the OR if bleeding persists.</li>
+  <li>Urine leak or ureteral narrowing (may require stent/exchange or procedure).</li>
+  <li>Fluid collections near the kidney (seroma/lymphocele) that sometimes need drainage.</li>
+  <li>Wound problems and incisional/inguinal hernias.</li>
+  <li>Delayed graft function—they coordinate with the medical team if dialysis is needed short term.</li>
+</ul>
 
-    <h2>When to see them / what to bring</h2>
-    <ul>
-      <li>Typical visit timing and any prep (med list, forms, logs).</li>
-    </ul>
+<h2>When to Go to Them</h2>
+<ul>
+  <li><strong>Pre-op consult:</strong> get incision/approach details, device plans (stent, JP, wound vac), and specific risks for you.</li>
+  <li><strong>In hospital:</strong> questions about lines/drains, incision concerns, or if pain/swelling worsens around the surgical site.</li>
+  <li><strong>After discharge:</strong> new or worsening redness, drainage, bulge at the incision, persistent fluid from a drain, or trouble after stent removal—contact the transplant team; the surgeon’s group will be looped in.</li>
+</ul>
 
-    <div class="callout"><p><strong>Questions to ask:</strong> A short, practical list tailored to this role.</p></div>
+<h2>What They Don’t Handle (Boundaries)</h2>
+<ul>
+  <li>Long-term medication dosing or lab-by-lab immunosuppression changes — nephrologist/pharmacist manage this.</li>
+  <li>Routine refills, day-to-day scheduling, and forms — coordinator/social worker/clinic handle these.</li>
+  <li>Non-surgical symptoms (fever, blood pressure, electrolytes) — call the transplant clinic; they will route as needed.</li>
+  <li>Emergencies (severe chest pain, breathing trouble, heavy bleeding) — use on-call instructions or 911.</li>
+</ul>
 
-    <p class="disclaimer">Informational only; your center’s process may differ.</p>
+<p class="disclaimer">Informational only; roles vary by center. Follow your surgical team’s specific instructions.</p>
+
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
